Open USD cachefile - Don't show usd format in Mesh Sequence Cache and Transform Cache #99114

Closed
opened 2022-06-23 19:05:31 +02:00 by Quentin · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.77

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
Modifier : Mesh Sequence Cache and Constraint : Transfrom Cache

Both are supposed to open an ABC or USD cache but they don't show .usd (and any type of usd format) format when you try to open a cachefile.

Exact steps for others to reproduce the error

  • Previously create an cache object in usd, usda, usdc or usdz.
  • Open a new blender file.
  • Create a Cude;
  • Create a Mesh Sequence Cache Modifier and/or a constraint Transform Cache.
  • Click on "Open".
  • Go where you previously saved your usd cache.
  • No usd shown
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.77 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** Modifier : Mesh Sequence Cache and Constraint : Transfrom Cache Both are supposed to open an ABC or USD cache but they don't show .usd (and any type of usd format) format when you try to open a cachefile. **Exact steps for others to reproduce the error** - Previously create an cache object in usd, usda, usdc or usdz. - Open a new blender file. - Create a Cude; - Create a Mesh Sequence Cache Modifier and/or a constraint Transform Cache. - Click on "Open". - Go where you previously saved your usd cache. - No usd shown
Author

Added subscriber: @Eqkoss

Added subscriber: @Eqkoss
Quentin changed title from Open USD cachefile Don't show usd format in Mesh Sequence Cache and Transform Cache to Open USD cachefile - Don't show usd format in Mesh Sequence Cache and Transform Cache 2022-06-23 19:06:05 +02:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Note, that you can disable filter in file browser, so you can see all files.

Note, that you can disable filter in file browser, so you can see all files.
Author

Indeed, thanks for that, it's a good point, I had never paie attention.

However by default, I think Blender should suggest all possible file types, as it already does for ABCs.

Thanks for the tips and the task status

Indeed, thanks for that, it's a good point, I had never paie attention. However by default, I think Blender should suggest all possible file types, as it already does for ABCs. Thanks for the tips and the task status

Added subscriber: @makowalski

Added subscriber: @makowalski

This issue is actually addressed as part of patch D14087, in the last item of the description:

  • Additionally, updated the mesh sequence cache modifier file browser to display USD files, whereas previously it would display Alembic files only.

However, I think I'll move the file browser fix to its own separate patch, since it's tangential to the main issue addressed in D14087.

This issue is actually addressed as part of patch [D14087](https://archive.blender.org/developer/D14087), in the last item of the description: * Additionally, updated the mesh sequence cache modifier file browser to display USD files, whereas previously it would display Alembic files only. However, I think I'll move the file browser fix to its own separate patch, since it's tangential to the main issue addressed in [D14087](https://archive.blender.org/developer/D14087).
Michael Kowalski self-assigned this 2022-07-18 04:29:31 +02:00

Added subscriber: @codeloadgame

Added subscriber: @codeloadgame
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:48 +01:00
Sybren A. Stüvel added
Module
Pipeline, Assets & IO
and removed
Module
Animation & Rigging
labels 2023-05-19 15:05:31 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-25 14:52:23 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99114
No description provided.